--- a/Client/Pages/Chapters.razor
+++ b/Client/Pages/Chapters.razor
@@ -13,7 +13,7 @@
 
 @if (chapters != null)
 {
-		<div class="d-flex flex-column gap-3">
+		<div class="d-flex flex-column gap-3 mb-3">
 		@foreach (var item in chapters)
 		{
 			<a class="anostyle hoverable py-2 px-3 flex-nowrap d-flex align-items-center w-100 gap-3" href="/view/documentTypes?school=@school&yeargroup=@yearGroup&subjectId=@subjectId&chapterId=@item.Id">
