--- a/Client/Pages/Subjects.razor
+++ b/Client/Pages/Subjects.razor
@@ -16,7 +16,7 @@ currentView="PathModels.paths.subjects" />
 
 @if (subjects != null && collapsedChapterPreview!=null)
 {
-	<div class="d-flex flex-column gap-3">
+	<div class="d-flex flex-column gap-3 mb-3">
 		@foreach (var item in subjects)
 		{
 			<div class="d-flex flex-column gap-1">
