--- a/Server/Pages/LoginRegister/Login.cshtml
+++ b/Server/Pages/LoginRegister/Login.cshtml
@@ -15,7 +15,7 @@
     <input type="password" class="form-control" id="exampleInputPassword1" name="password">
   </div>
   <div>
-        <button type="submit" class="btn btn-secondary" style="width:125px">
+        <button type="submit" class="btn btn-success" style="width:125px">
             <i class="bi bi-door-open"></i>
             Log in
         </button>
