--- a/Client/Pages/DocumentTypes.razor
+++ b/Client/Pages/DocumentTypes.razor
@@ -17,7 +17,7 @@ currentView="PathModels.paths.docTypes" />
 
 @if (documentTypes != null)
 {
-	<div class="d-flex flex-column gap-3">
+	<div class="d-flex flex-column gap-3 mb-3">
 		@foreach (var item in documentTypes)
 		{
 			<a class="anostyle hoverable py-2 px-3 flex-nowrap d-flex align-items-center w-100"
