--- a/Client/wwwroot/lib/style.css
+++ b/Client/wwwroot/lib/style.css
@@ -118,3 +118,25 @@ h1:focus {
     color: inherit;
     text-decoration: underline;
 }
+
+.annotation {
+    padding: .5rem;
+    background: #9b85851c;
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 2px #cdcaca;
+}
+
+
+.image-container {
+    position: relative;
+    cursor: crosshair;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
